Copied footer to Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -312,7 +312,7 @@
           <a class="footer-logo list" href="./index.html">
             <span>Web</span>Studio
           </a>
-          <address class="footer-address">
+          <address>
             <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
             <ul class="list">
               <li class="address-mail">
@@ -361,6 +361,29 @@
             </li>
           </ul>
         </div>
+        <form class="footer-form">
+          <p class="section-title footer-form-text">Подпишитесь на рассылку</p>
+
+          <div class="sigh-up">
+            <input
+              name="user_email"
+              type="text"
+              class="footer-form-input"
+              placeholder="E-mail"
+            />
+            <span class="footer-form-wrapper">
+              <button
+                class="button-modal-submit hero-button button-sigh-up"
+                type="submit"
+              >
+                Подписаться
+              </button>
+              <svg class="footer-button-modal-icon">
+                <use href="./images/svg/icons.svg#icon-sign-up"></use>
+              </svg>
+            </span>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
